<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:textSize="25dp"
        android:background="@color/colorBackAtTop"
        android:textColor="@color/colorTopText"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/top_txt_value"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorHateFont"
        android:background="@color/colorHateBack"
        android:layout_weight="2"
        android:text="@string/middle_button"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:text="@string/bottom_button"
        android:onClick="homePage"

        android:textColor="@color/colorHaaaButton"
        android:background="@color/colorHaBack"
        />
    </LinearLayout>

</LinearLayout>