<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="2dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_monetization_on_black_24dp"
                    android:background="@drawable/icon_bg_income"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Income"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/income_string"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="2dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_money_off_black_24dp"
                    android:background="@drawable/icon_bg_expenses"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Expenses"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expense_sring"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="10dp"
        >
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="profileFrame"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                >


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="2dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_graphic_eq_black_24dp"
                    android:background="@drawable/icon_bg_4"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_string"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_photo_library_black_24dp"
                    android:background="@drawable/icon_bg_tax"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gallery"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_string"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        >
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="10dp"
                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_textsms_black_24dp"
                    android:background="@drawable/icon_bg_5"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Messages"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_string"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>